# geo2sigmap

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/DukeMeasurements/: CBRS_Measurements_Duke_Campus.csv
data/measurement/: masked_cleaned_view.csv
data/measurements/: Duke_CBRS.csv
data/test/: 0_78d03890-be26-47f8-8b81-8485f0d19a83.npy  0_c8681783-aa00-46e7-92b2-ca15c5beca67.npy
docs/gh-pages/: index.html
examples/: 1_sionna_coverage_map.ipynb  2_sionna_rays_analysis.ipynb  4_ml_coverage_map.ipynb  5_scene_nist_28ghz_boulder.ipynb  GetAreabyClick.ipynb  SionnaRayTracing.ipynb  ml_coverage_map.ipynb  ml_inference.ipynb  sionna_rt_coverage_map.ipynb  sionna_rt_rays_analyze.ipynb
examples/antenna_Pattern/: 2J 2J0102-C115N 2.4GHz.msi  Canopy.msi
gen_data/: README.md  requirements.txt
gen_data/Step1_OSM/: OSM.py  OSM_Download.py  OSM_PreCheck_and_Download.py  OSM_from_generate_nc_dataset.py
gen_data/Step2_Blender/: add_height_info.ipynb  add_height_info.py  blender_bing_test.py  blender_test_command_line.py  blender_test_wrapper.py  blender_wrapper.py
gen_data/Step3_Sionna/: xml_to_heatmap_one_run512_tr38901.py  xml_to_heatmap_wrapper512_tr38901_randAngle.py
ml/: CBRSUtils.py  DukePred_transfer_recover.ipynb  README.md  RMSLELoss.py  evaluate_rt.py  requirements.txt  train_RT.py  train_transfomer_learning.py
ml/unet/: unet_model_rt.py
ml/utils/: data_loading_rt.py
src/scene_generation/: cli.py  core.py  empirical_pathloss_model.py  itu_materials.py  utils.py
src/scene_generation_pipe/: __init__.py  cli.py  core.py  (+1 more)
(+373 files in other folders)
