[project]
name = "scene_generation"
version = "0.0.1"
dependencies = [
    "osmnx >= 2.0.0",
    "numpy",
    "pyproj",
    "shapely",
    "rasterio",
    "tqdm",
    "pillow",
    "open3d",
    "triangle",
]
requires-python = ">=3.9"


[project.scripts]
scene_generation = "scene_generation.cli:main"
