[project]
name = "scene_generation"
version = "1.0.0"
dependencies = [
    "osmnx >= 2.0.0",
    "numpy",
    "pyproj",
    "shapely",
    "rasterio",
    "tqdm",
    "pillow",
    "open3d",
    "triangle",
    "scikit-learn",
]
requires-python = ">=3.9"


[project.scripts]
scenegen = "scene_generation.cli:main"
